Add static site

--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -7,7 +7,7 @@
 
 	<nav id="sidebar">
 		<div class="sidebar-header">
-			<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="{{ path('home') }}"><img src="/assets/img/logo.png" style="max-height:70px" /></a>
+			<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="{{ path('home') }}"><img src="/assets/img/logo-taekwonkido.png" style="max-height:70px" /></a>
 		</div>
 		<ul class="list-unstyled components">
 			{{ render(controller('App\\Controller\\MenuLeftController::viewMenuLeft')) }}
@@ -47,7 +47,6 @@
 		<div>
 			{% block dashboardcontent %}{% endblock %}
 		</div>
-
 
 	</div>
 
