--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -35,7 +35,7 @@
 					<p>{% trans %}Le Cénacle Rémi Mollet est une école d'arts martiaux français et asiatiques sous la direction technique de Maître Rémi Mollet. Doté d'une expérience de plus de 45 ans,
 Maître Rémi Mollet, assisté de ses ceintures noires, enseigne le Taekwonkido, le Taekwondo, le Hapkido, le Gumdo et d'autres arts martiaux dans une trentaine de clubs
 dispatchés dans toute la France.{% endtrans %}</p>
-						<p><a class="btn btn-secondary" href="<?php echo $uriPrefix ?>/pres/cenacle" role="button">En savoir plus &raquo;</a></p>
+						<p><a class="btn btn-secondary" href="/cenacle" role="button">En savoir plus &raquo;</a></p>
 				</div>
 				<div class="col-md-4">
 					<h2>{% trans %}Taekwonkido{% endtrans %}</h2>
@@ -43,7 +43,7 @@ dispatchés dans toute la France.{% endtrans %}</p>
 Mollet et le Dr. Jean-Laurent Taddeï, synthétisant les techniques de Karaté,
 Taekwondo, de Hapkido, de Gumdo (sabre), d’arts martiaux coréens et surtout de
 Khido, méthode supérieure instaurée par Me Michel Morlon, créée en 1984.{% endtrans %}</p>
-					<p><a class="btn btn-secondary" href="<?php echo $uriPrefix ?>/pres/taekwonkido" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
+					<p><a class="btn btn-secondary" href="/taekwonkido" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
 				</div>
 				<div class="col-md-4">
 					<h2>{% trans %}Taekwondo{% endtrans %}</h2>
@@ -51,20 +51,20 @@ Khido, méthode supérieure instaurée par Me Michel Morlon, créée en 1984.{% 
 et l’esprit dans lequel il est pratiqué entraîne obligatoirement 
 courtoisie, loyauté, persévérance, maîtrise de soi, combativité 
 sans agressivité.{% endtrans %}</p>
-					<p><a class="btn btn-secondary" href="<?php echo $uriPrefix ?>/pres/taekwondo" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
+					<p><a class="btn btn-secondary" href="/taekwondo" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
 				</div>
 				<div class="col-md-4">
 					<h2>{% trans %}Hapkido{% endtrans %}</h2>
 					<p>{% trans %}Le Hapkido a été fondé par Me. CHOI Yong Sul  qui partit pour le Japon en 
 1912 où il fut adopté par la famille de Sokaku Takeda avec qui il 
 s’entraîna durant 30 ans.{% endtrans %}</p>
-					<p><a class="btn btn-secondary" href="<?php echo $uriPrefix ?>/pres/hapkido" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
+					<p><a class="btn btn-secondary" href="/hapkido" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
 				</div>
 				<div class="col-md-4">
 					<h2>{% trans %}Sinkido Self-Défense Système{% endtrans %}</h2>
 					<p>{% trans %}Le Sinkido Self-Défense Système est une méthode qui s'adresse exclusivement aux adultes et aux seniors.
 C'est un programme d'autodéfense accessible, axé sur l'efficacité, il est directement applicable en combat réel.{% endtrans %}</p>
-					<p><a class="btn btn-secondary" href="<?php echo $uriPrefix ?>/pres/sinkidosds" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
+					<p><a class="btn btn-secondary" href="/sinkidosds" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
 				</div>
 			</div>
 			<hr />
