--- a/templates/club/club-edit.html.twig
+++ b/templates/club/club-edit.html.twig
@@ -10,7 +10,7 @@
 
 	<div class="row p-3 flex-nowrap">
 		<div><img src="/api/club/{{ club.uuid }}/logo" class="p-1"/></div>
-		<span class="clubname h3 p-1">{{ club.name | default('') }}xxxx</span>
+		<span class="clubname h3 p-1">{{ club.name | default('') }}</span>
 	</div>
 
 	<ul class="nav nav-tabs" id="myTab" role="tablist">
