--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -8,6 +8,9 @@
 	<nav id="sidebar" style="height: 100%">
 		<div class="sidebar-header" style="padding-top:10px; padding-bottom: 10px;">
 			<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="{{ path('home') }}"><img src="/assets/img/logo-taekwonkido.png" style="max-height:70px" /></a>
+			{% if club is defined and club.uuid is defined %}
+				<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="/club/{{ club.uuid }}"><img src="/api/club/{{ club.uuid }}/logo" style="max-height:70px" /></a>
+			{% endif %}
 		</div>
 		<ul class="list-unstyled components" style="padding-top:5px; padding-bottom: 10px;">
 			{{ render(controller('App\\Controller\\MenuLeftController::viewMenuLeft', {'club': club | default() })) }}
