--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -9,7 +9,7 @@
 		<div class="sidebar-header" style="padding-top:10px; padding-bottom: 10px;">
 			<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="{{ path('home') }}"><img src="/assets/img/logo-taekwonkido.png" style="max-height:70px" /></a>
 			{% if club is defined and club.uuid is defined %}
-				<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="/club/{{ club.uuid }}"><img src="/api/club/{{ club.uuid }}/logo" style="max-height:70px" /></a>
+				&nbsp;<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="/club/{{ club.uuid }}"><img src="/api/club/{{ club.uuid }}/logo" style="max-height:56px" /></a>
 			{% endif %}
 		</div>
 		<ul class="list-unstyled components" style="padding-top:5px; padding-bottom: 10px;">
@@ -34,15 +34,15 @@
 							{% if searchResult is defined%}value="{{ searchResult.q }}"{% endif %}>
 				</div>
 				<div class="loginoutdiv">
-    				<ul class="navbar-nav">
-    					<li class="nav-item text-nowrap">
-    						{% if connectedUser is defined and connectedUser != null %}
-    							<a class="btn btn-primary" href="/logout" role="button">{% trans %}Sign out{% endtrans %}</a>
-    						{% else %}
-    							<a class="btn btn-primary" href="/login" role="button">{% trans %}Sign in{% endtrans %}</a>
-    						{% endif %}
-    					</li>
-    				</ul>
+					<ul class="navbar-nav">
+						<li class="nav-item text-nowrap">
+							{% if connectedUser is defined and connectedUser != null %}
+								<a class="btn btn-primary" href="/logout" role="button">{% trans %}Sign out{% endtrans %}</a>
+							{% else %}
+								<a class="btn btn-primary" href="/login" role="button">{% trans %}Sign in{% endtrans %}</a>
+							{% endif %}
+						</li>
+					</ul>
 				</div>
 			</div>
 		</nav>
