--- a/templates/home.html.twig
+++ b/templates/home.html.twig
@@ -67,7 +67,8 @@ C'est un programme d'autodéfense accessible, axé sur l'efficacité, il est dir
 					<p><a class="btn btn-secondary" href="/sinkidosds" role="button">{% trans %}En savoir plus &raquo;{% endtrans %}</a></p>
 				</div>
 			</div>
-			<hr />
+			
+			{% include 'footer-crm.html.twig' %}
 		</div>
 		
 	</div>
