--- a/public_html/assets/dashboard/dashboard.css
+++ b/public_html/assets/dashboard/dashboard.css
@@ -1,5 +1,9 @@
+html {
+	height: 100%;
+}
 body {
   font-size: .875rem;
+  height: 100%;
 }
 
 .feather {
@@ -273,3 +277,25 @@ a.article:hover {
 .menu-left-club {
 	background: #444;
 }
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+}
+.fa:hover {
+	opacity: 0.7;
+}
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+/* Twitter */
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+
