--- a/templates/dashboard.html.twig
+++ b/templates/dashboard.html.twig
@@ -8,15 +8,12 @@
 	<nav id="sidebar" style="height: 100%">
 		<div class="sidebar-header" style="padding-top:10px; padding-bottom: 10px;">
 			<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="{{ path('home') }}"><img src="/assets/img/logo-taekwonkido.png" style="max-height:70px" /></a>
-			{% if club is defined and club.uuid is defined %}
-				&nbsp;<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="/club/{{ club.uuid }}"><img src="/api/club/{{ club.uuid }}/logo" style="max-height:56px" /></a>
-			{% endif %}
 		</div>
 		<ul class="list-unstyled components" style="padding-top:5px; padding-bottom: 10px;">
 			{{ render(controller('App\\Controller\\MenuLeftController::viewMenuLeft', {'club': club | default() })) }}
 		</ul>
 	</nav>
-
+	
 	<div id="content">
 		<nav class="navbar navbar-expand-lg navbar-light bg-light" style="margin-bottom: 20px">
 			<div class="container-fluid" style="/*border-style: solid; border-color: blue;*/">
@@ -46,10 +43,22 @@
 				</div>
 			</div>
 		</nav>
+	{% if club is defined and club.uuid is defined %}
+		<a class="col-sm-3 col-md-2 mr-0" style="padding:2px!important" href="/club/{{ club.uuid }}"><img src="/api/club/{{ club.uuid }}/logo" style="max-height:90px" /></a>
+		<span class=" h3 p-1">{{ club.name }}</span>
+	{% endif %}
 
 		<div>
 			{% block dashboardcontent %}{% endblock %}
 		</div>
+
+
+	{% if club is defined and club.uuid is defined %}
+		{# specific club footer #}
+		<div><h2>club footer</h2></div>
+	{% elseif app.request.attributes.get('_route') != 'home' %}
+		{% include 'footer-crm.html.twig' %}
+	{% endif %}
 
 	</div>
 
