--- a/templates/footer-crm.html.twig
+++ b/templates/footer-crm.html.twig
@@ -3,7 +3,8 @@
 	<p><strong>C&eacute;nacle R&eacute;mi Mollet<br>
 	Ecole Henri Cahn, Boulevard Galliéni 94360 Bry sur Marne<br>
 	Informations : 06 95 904 408<strong></p>
-	<a href="https://www.facebook.com/CENACLEREMIMOLLET" class="fa fa-facebook"></a>
-	<a href="https://twitter.com/cenaclerm?lang=fr" class="fa fa-twitter"></a>
+	<a href="https://www.facebook.com/CENACLEREMIMOLLET"><img src="/assets/img/logo-facebook.svg" loading="lazy" alt="Twitter"></a>
+	&nbsp;&nbsp;<a href="https://twitter.com/cenaclerm?lang=fr"><img src="/assets/img/logo-twitter.svg" loading="lazy" alt="Twitter" width="36"></a>
 	<p></p>
+	<br>
 </footer>
