--- a/templates/showcase/cenacle.html.twig
+++ b/templates/showcase/cenacle.html.twig
@@ -18,10 +18,10 @@
 	<div class="d-md-flex flex-md-equal w-100 my-md-3">
 		<div class="bg-dark mr-md-3 p-2 text-center text-white overflow-hidden sc-text">
 			<div class="my-3 py-3">
-				<p class="lead">Le Cénacle Rémi Mollet est une école d'Arts Martiaux Français, Coréens et asiatiques.
+				<p class="lead">{% trans %}Le Cénacle Rémi Mollet est une école d'Arts Martiaux Français, Coréens et asiatiques.
 On y enseigne principalement le Taekwonkido, Taekwondo, mais aussi le Hapkido et le Gumdo.
 Le Cénacle est composé d'une trentaine de clubs (dojang) répartis dans 
-toute la France. Il y a même un club aux Pays-Bas et des sympathisants en Suisse, en Angleterre, etc.</p>
+toute la France. Il y a même un club aux Pays-Bas et des sympathisants en Suisse, en Angleterre, etc.{% endtrans %}</p>
 			</div>
 		</div>
 		<div class="bg-light mr-md-3 text-center overflow-hidden">
@@ -36,12 +36,12 @@ toute la France. Il y a même un club aux Pays-Bas et des sympathisants en Suiss
 		</div>
 		<div class="bg-dark mr-md-3 p-2 text-center text-white overflow-hidden sc-text">
 			<div class="my-3 py-3">
-				<p class="lead">La particularité du Cénacle est l'organisation d'activités communes à tous les 
+				<p class="lead">{% trans %}La particularité du Cénacle est l'organisation d'activités communes à tous les 
 clubs. Cela génère une dynamique de groupe tout à fait exceptionnelle. 
 Cette dynamique favorise la création de liens entre les élèves des différents clubs.
 Par exemple, il est possible pour un élève de s'entraîner dans tous les clubs de son
 choix, sous certaines conditions. Il peut tout à fait assister aux cours dispensés par 
-le Maître Rémi Mollet sans supplément de cotisation.</p>
+le Maître Rémi Mollet sans supplément de cotisation.{% endtrans %}</p>
 			</div>
 		</div>
 	</div>
